--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,16 @@
 
  <%- include('partials/header'); -%>  
 
-<h1>hello world</h1>
+ <header>
+    <div class="head_content">
+        <div class="content_text">
+            <h1>Publish your ideas, your way</h1>
+            <h3>Create beautiful and unique blogs. It's easy and free</h3>
+        </div>
+        <div class="content_button">
+            <a href="/signup">Get started</a>
+        </div>
+    </div>
+</header>
 
 <%- include('partials/footer'); -%> 
