--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,51 +1,59 @@
 <%- include('partials/header'); -%>
 
-<form action="/signup">
-    <h2>Login</h2>
-    <label for="email">Email</label>
-    <input type="text" name="email" />
-    <div class="email error"></div>
-    <label for="password">Password</label>
-    <input type="password" name="password" />
-    <div class="password error"></div>
-    <button>login</button>
-    <div class="form_foot">
-      <p>Don't have an account? <a href="/signup">Create one</a></p>
-    </div>
+<form>
+  <h2>Login</h2>
+  <label for="email">Email <i class="fas fa-at"></i></label>
+  <input type="text" name="email" />
+  <div class="email error"></div>
+
+  <label for="password">Password <i class="fas fa-unlock"></i></label>
+  <input type="password" name="password" />
+  <div class="password error"></div>
+
+  <button>login</button>
+  <div class="form_foot">
+    <p>Don't have an account? <a href="/signup">Create one</a></p>
+  </div>
 </form>
 
-  
-  <script>
-    const form = document.querySelector("form");
-    const emailError = document.querySelector(".email.error");
-    const passwordError = document.querySelector(".password.error");
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      // reset errors
-      emailError.textContent = "";
-      passwordError.textContent = "";
-      // get values
-      const email = form.email.value;
-      const password = form.password.value;
-      try {
-        const res = await fetch("/login", {
-          method: "POST",
-          body: JSON.stringify({ email, password }),
-          headers: { "Content-Type": "application/json" },
-        });
-        const data = await res.json();
-        // console.log(data);
-        if (data.errors) {
-          emailError.textContent = data.errors.email;
-          passwordError.textContent = data.errors.password;
-        }
-        if (data.user) {
-          location.assign("/");
-        }
-      } catch (err) {
-        console.log(err);
+<script>
+  const form = document.querySelector("form");
+  const emailError = document.querySelector(".email.error");
+  const passwordError = document.querySelector(".password.error");
+  form.addEventListener("submit", async (e) => {
+    e.preventDefault();
+
+    // reset errors
+    emailError.textContent = "";
+    passwordError.textContent = "";
+
+    // get values
+    const email = form.email.value;
+    const password = form.password.value;
+
+    try {
+      const res = await fetch("/login", {
+        method: "POST",
+        body: JSON.stringify({
+          email,
+          password
+        }),
+        headers: {
+          "Content-Type": "application/json"
+        },
+      });
+      const data = await res.json();
+      if (data.errors) {
+        emailError.textContent = data.errors.email;
+        passwordError.textContent = data.errors.password;
       }
-    });
-  </script>
+      if (data.user) {
+        location.assign("/");
+      }
+    } catch (err) {
+      console.log(err);
+    }
+  });
+</script>
 
 <%- include('partials/footer'); -%>
