--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,12 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title><%= title %></title>
   <link rel="stylesheet" href="/styles.css" />
   <link rel="shortcut icon" href="/favicon.svg" type="image/x-icon" />
-  <script src="https://kit.fontawesome.com/e5a5ba9f21.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/e5a5ba9f21.js" crossorigin="anonymous" defer></script>
 </head>
 
 <body>
@@ -26,7 +25,7 @@
         <% if(user) { %>
         <h3>
           <div class="greet">
-            <a href="/courses" style="text-decoration: none">Hello, <%= user.name %></a>
+            <a href="/courses" style="text-decoration: none">Hello, <%= user.userName %></a>
           </div>
         </h3>
         <a href="/profile">
@@ -49,3 +48,11 @@
       </div>
     </div>
   </div>
+  <script>
+    const loc = window.location.href.split('/');
+    const active = loc[loc.length-1]
+
+    if(active) {
+      document.querySelector(`.options a[href="/${active}"]`).classList.add('current-page')
+    }
+  </script>
