--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,14 +25,14 @@
         <% if(user) { %>
         <h3>
           <div class="greet">
-            <a href="/courses" style="text-decoration: none">Hello, <%= user.userName %></a>
+            <a href="/tasks" style="text-decoration: none">Hello, <%= user.userName %></a>
           </div>
         </h3>
         <a href="/profile">
           <div class="profile">Profile</div>
         </a>
         <a href="/usertasks">
-          <div class="tasks">Tasks</div>
+          <div class="tasks">Create+</div>
         </a>
         <a href="/logout">
           <div class="logout">Logout</div>
