--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,10 +1,10 @@
 <%- include('partials/header'); -%>
 
-<div class="container-flex" style="width: 30%; margin: 9rem auto 15rem;">
+<div class="container-flex" style="width: 30%; margin: 9rem auto 16rem;">
     <div>
         <h1>We are working on it.. </h1>
     </div>
-    <div><img src="https://img.icons8.com/ios-glyphs/90/000000/broken-robot.png" /></div>
+    <div><img src="icons8-broken-robot-96.png"/></div>
 </div>
 
 <%- include('partials/footer'); -%>
