--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,7 +32,7 @@
           <div class="profile">Profile</div>
         </a>
         <a href="/usertasks">
-          <div class="tasks">Create+</div>
+          <div class="tasks">Create</div>
         </a>
         <a href="/logout">
           <div class="logout">Logout</div>
