--- a/views/404.ejs
+++ b/views/404.ejs
@@ -4,7 +4,7 @@
     <div>
         <h1>We are working on it.. </h1>
     </div>
-    <div><img src="icons8-broken-robot-96.png"/></div>
+    <div><img src="./images/icons8-broken-robot-96.png" /></div>
 </div>
 
 <%- include('partials/footer'); -%>
