--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,15 +4,15 @@
   <h2>Login</h2>
   <label for="email">Email <i class="fas fa-at"></i></label>
   <input type="text" name="email" />
-  <div class="email error"></div>
+  <div class="email error"> </div>
 
   <label for="password">Password <i class="fas fa-unlock"></i></label>
   <input type="password" name="password" />
-  <div class="password error"></div>
+  <div class="password error"> </div>
 
   <button>login</button>
   <div class="form_foot">
-    <p>Don't have an account? <a href="/signup">Create one</a></p>
+    <p>Don't have an account yet? <a href="/signup">Create one</a></p>
   </div>
 </form>
 
