--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,13 @@
+<%- include('partials/header'); -%>
 
- <%- include('partials/header'); -%>  
-
- <header>
+<header>
     <div class="head_content">
         <div class="content_text">
-            <h1>Publish your ideas, your way</h1>
-            <h3>Create beautiful and unique blogs. It's easy and free</h3>
+            <h1 class="text-shadow">Publish your ideas, your way</h1>
+            <h3 class="text-shadow">Create beautiful and unique blogs. It's easy and free</h3>
         </div>
-        <div class="content_button">
-            <a href="/signup">Get started</a>
-        </div>
+        <!-- <div class="content_button"> -->
+        <a href="/signup" class="content_button">Get started</a>
+        <!-- </div> -->
     </div>
 </header>
-
-<%- include('partials/footer'); -%> 
