--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,7 +15,7 @@
     <div class="head_container container-flex">
       <div class="main_head container-flex">
         <div class="header_text">
-          <h1 class="head text"><a href="/">Blogscape</a></h1>
+          <h1 class="head text" id="Blogscape"><a href="/">Blogscape</a></h1>
         </div>
       </div>
       <div class="options container-flex">
