--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
         <div class="content_text">
             <h1 class="text-shadow">Publish your ideas, your way</h1>
             <h3 class="text-shadow">Create beautiful and unique blogs. It's easy and free</h3>
+            <img src="./images/publishIdeas.svg" alt="" height="300px" width="300px">
         </div>
         <!-- <div class="content_button"> -->
         <a href="/signup" class="content_button">Get started</a>
