--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,9 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title><%= title %></title>
+  <title>BlogScape | <%= title %></title>
   <link rel="stylesheet" href="/styles.css" />
   <link rel="shortcut icon" href="/favicon.svg" type="image/x-icon" />
+  <link rel="shortcut icon" href="./images/Blogger.svg" type="image/x-icon">
   <script src="https://kit.fontawesome.com/e5a5ba9f21.js" crossorigin="anonymous" defer></script>
 </head>
 
