--- a/public/styles.css
+++ b/public/styles.css
@@ -276,6 +276,9 @@ form button:hover {
   justify-content: space-evenly;
   align-items: center;
   width: 80%;
+  
+  min-width: 800px;
+
   margin: 2em auto;
 }
 
@@ -286,16 +289,27 @@ form button:hover {
   justify-content: center;
 
   width: 20%;
+  min-width: 200px;
   height: 550px;
 
-  /* background-color: rgba(255, 255, 255, 0.7); */
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.95);
+  /* background-color: white; */
   border-radius: 10px;
+
+  overflow: hidden;
 }
 
 .category {
   padding: 0.5em;
   text-align: center;
+
+  cursor: pointer;
+  
+  border-left: 3px solid transparent;
+}
+
+.category:hover {
+  text-shadow: 2px 2px 5px #414ce6;
 }
 
 .c1 {
@@ -387,6 +401,9 @@ form button:hover {
 
   border-radius: 10px;
 }
+#create-blog-link:hover {
+  box-shadow: 0 0 10px rgb(55, 66, 221);
+}
 
 #blogs {
   width: 60%;
@@ -401,7 +418,10 @@ form button:hover {
 
 .blog {
   margin: 2em 0;
-  background-color: white;
+  /* background-color: white; */
+
+  
+  background-color: rgba(255, 255, 255, 0.95);
 
   
   padding: 1em;
@@ -500,10 +520,14 @@ footer {
 
   form {
     width: 90%;
-    padding: .5rem;
+    /* padding: 0.75em; */
     font-size: 2.5vw;
-    margin: 1rem;
+    margin-bottom: 2em;
     box-shadow: none;
+  }
+
+  form * {
+    margin: 0.5em auto;
   }
 
   form label {
